JumpScript/tests/baselines/reference/ES5SymbolProperty2.errors.txt
tests/cases/conformance/Symbols/ES5SymbolProperty2.jump(5,10): error TS2471: A computed property name of the form 'Symbol.iterator' must be of type 'symbol'.
tests/cases/conformance/Symbols/ES5SymbolProperty2.jump(10,11): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/conformance/Symbols/ES5SymbolProperty2.jump (2 errors) ====
    module M {
        var Symbol: any;
    
        export class C {
            [Symbol.iterator]() { }
             ~~~~~~~~~~~~~~~
!!! error TS2471: A computed property name of the form 'Symbol.iterator' must be of type 'symbol'.
        }
        (new C)[Symbol.iterator];
    }
    
    (new M.C)[Symbol.iterator];
              ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.